v0.11.0/_sources/generated/statsmodels.genmod.generalized_estimating_equations.NominalGEE.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.NominalGEE
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: NominalGEE
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~NominalGEE.cluster_list
      ~NominalGEE.compare_score_test
      ~NominalGEE.estimate_scale
      ~NominalGEE.fit
      ~NominalGEE.fit_regularized
      ~NominalGEE.from_formula
      ~NominalGEE.mean_deriv
      ~NominalGEE.mean_deriv_exog
      ~NominalGEE.predict
      ~NominalGEE.qic
      ~NominalGEE.setup_nominal
      ~NominalGEE.update_cached_means
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~NominalGEE.cached_means
      ~NominalGEE.endog_names
      ~NominalGEE.exog_names
   
   
   