v0.14.1/_sources/generated/statsmodels.genmod.generalized_estimating_equations.NominalGEE.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.NominalGEE
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: NominalGEE
   :exclude-members: cluster_list,compare_score_test,estimate_scale,estimate_tweedie_power,fit,fit_constrained,fit_regularized,from_formula,get_distribution,hessian,hessian_factor,information,initialize,loglike,loglike_mu,mean_deriv,mean_deriv_exog,predict,qic,score,score_factor,score_obs,score_test,setup_nominal,update_cached_means,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~NominalGEE.cluster_list
      ~NominalGEE.compare_score_test
      ~NominalGEE.estimate_scale
      ~NominalGEE.estimate_tweedie_power
      ~NominalGEE.fit
      ~NominalGEE.fit_constrained
      ~NominalGEE.fit_regularized
      ~NominalGEE.from_formula
      ~NominalGEE.get_distribution
      ~NominalGEE.hessian
      ~NominalGEE.hessian_factor
      ~NominalGEE.information
      ~NominalGEE.initialize
      ~NominalGEE.loglike
      ~NominalGEE.loglike_mu
      ~NominalGEE.mean_deriv
      ~NominalGEE.mean_deriv_exog
      ~NominalGEE.predict
      ~NominalGEE.qic
      ~NominalGEE.score
      ~NominalGEE.score_factor
      ~NominalGEE.score_obs
      ~NominalGEE.score_test
      ~NominalGEE.setup_nominal
      ~NominalGEE.update_cached_means
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~NominalGEE.cached_means
      ~NominalGEE.endog_names
      ~NominalGEE.exog_names
   
   
   